avx512 cmp,cvt,cvts,cvtt,cvtus,gather,kand,permutex,rcp: new ops for intgemm
sse/sse2: added ".f16" float16 accessor for m128 & m128i

mm{256,512}_cvt{ph_ps,ps_ph}: use .f16 instead of converting from u16

mm512_cvt{epi8_epi16,epi32_ps,cvtph_ps}: added _mm256_cvt* native fallbacks

--- a/meson.build
+++ b/meson.build
@@ -240,6 +240,7 @@ simde_avx512_families = [
   'cvt',
   'cvtt',
   'cvts',
+  'cvtus',
   'dbsad',
   'div',
   'dpbf16',
@@ -257,7 +258,9 @@ simde_avx512_families = [
   'fnmadd',
   'fnmsub',
   'fpclass',
+  'gather',
   'insert',
+  'kand',
   'kshift',
   'knot',
   'kxor',
@@ -280,11 +283,13 @@ simde_avx512_families = [
   'or',
   'packs',
   'packus',
+  'permutex',
   'permutexvar',
   'permutex2var',
   'popcnt',
   'range',
   'range_round',
+  'rcp',
   'reduce',
   'rol',
   'rolv',
