Packit: Add a feature to skip specific tests in the specific CPU cases.
Added the i386 (machine cpu: i686) case to the Packit CI. The CI only runs 1
test (GCC O2 flag test) in the i386 case, because the case takes longer running
time than other CPU cases, and fails in the GCC default test.

--- a/.packit.yml
+++ b/.packit.yml
@@ -19,9 +19,7 @@ jobs:
     # "Motivation and context" for details.
     targets:
       - fedora-rawhide-x86_64
-      # Comment out the i386 (i686) case as it takes much longer time.
-      # TODO: Implement a flexible way to run only specific tests.
-      # - fedora-rawhide-i386
+      - fedora-rawhide-i386
       - fedora-rawhide-aarch64
       - fedora-rawhide-ppc64le
       - fedora-rawhide-s390x
