[NEON] Add all fms, fms_n, and fms_lane intrinsics

--- a/meson.build
+++ b/meson.build
@@ -63,6 +63,9 @@ simde_neon_families = [
   'fma',
   'fma_lane',
   'fma_n',
+  'fms',
+  'fms_lane',
+  'fms_n',
   'get_high',
   'get_lane',
   'get_low',
