[NEON] Add ld3_dup, ld3_lane, and ld4_dup

--- a/meson.build
+++ b/meson.build
@@ -84,7 +84,10 @@ simde_neon_families = [
   'ld2_dup',
   'ld2_lane',
   'ld3',
+  'ld3_dup',
+  'ld3_lane',
   'ld4',
+  'ld4_dup',
   'ld4_lane',
   'max',
   'maxnm',
