--- a/meson.build
+++ b/meson.build
@@ -100,6 +100,7 @@ simde_neon_families = [
   'mla_n',
   'mlal',
   'mlal_high',
+  'mlal_high_lane',
   'mlal_high_n',
   'mlal_lane',
   'mlal_n',
@@ -132,6 +133,10 @@ simde_neon_families = [
   'pmin',
   'qadd',
   'qabs',
+  'qdmlal',
+  'qdmlal_high',
+  'qdmlal_high_lane',
+  'qdmlal_high_n',
   'qdmulh',
   'qdmulh_lane',
   'qdmulh_n',
