[NEON] Add qdmlal_lane and qdmlal_n series intrinsics

--- a/meson.build
+++ b/meson.build
@@ -105,9 +105,11 @@ simde_neon_families = [
   'mlal_lane',
   'mlal_n',
   'mls',
+  'mls_lane',
   'mls_n',
   'mlsl',
   'mlsl_high',
+  'mlsl_high_lane',
   'mlsl_high_n',
   'mlsl_lane',
   'mlsl_n',
@@ -137,6 +139,8 @@ simde_neon_families = [
   'qdmlal_high',
   'qdmlal_high_lane',
   'qdmlal_high_n',
+  'qdmlal_lane',
+  'qdmlal_n',
   'qdmulh',
   'qdmulh_lane',
   'qdmulh_n',
