[Fix] Fix wrong function name.

--- a/meson.build
+++ b/meson.build
@@ -113,6 +113,7 @@ simde_neon_families = [
   'mlsl_high_n',
   'mlsl_lane',
   'mlsl_n',
+  #'mmlaq',
   'movl',
   'movl_high',
   'movn',
@@ -141,10 +142,19 @@ simde_neon_families = [
   'qdmlal_high_n',
   'qdmlal_lane',
   'qdmlal_n',
+  'qdmlsl',
+  'qdmlsl_high',
+  'qdmlsl_high_lane',
+  'qdmlsl_high_n',
+  'qdmlsl_lane',
+  'qdmlsl_n',
   'qdmulh',
   'qdmulh_lane',
   'qdmulh_n',
   'qdmull',
+  'qdmull_high',
+  'qdmull_high_n',
+  'qdmull_lane',
   'qrdmulh',
   'qrdmulh_lane',
   'qrdmulh_n',
