[NEON] Add qdmull_n and qdmull_high_lane series intrinsics

--- a/meson.build
+++ b/meson.build
@@ -153,8 +153,10 @@ simde_neon_families = [
   'qdmulh_n',
   'qdmull',
   'qdmull_high',
+  'qdmull_high_lane',
   'qdmull_high_n',
   'qdmull_lane',
+  'qdmull_n',
   'qrdmulh',
   'qrdmulh_lane',
   'qrdmulh_n',
