[NEON] Add qrshr{u}n_high_n, qshrn_high_n, and rshrn_high_n.

--- a/meson.build
+++ b/meson.build
@@ -160,7 +160,9 @@ simde_neon_families = [
   'qrdmulh',
   'qrdmulh_lane',
   'qrdmulh_n',
+  'qrshrn_high_n',
   'qrshrn_n',
+  'qrshrun_high_n',
   'qrshrun_n',
   'qmovn',
   'qmovn_high',
@@ -168,6 +170,7 @@ simde_neon_families = [
   'qneg',
   'qshl',
   'qshlu_n',
+  'qshrn_high_n',
   'qshrn_n',
   'qshrun_n',
   'qsub',
@@ -188,6 +191,7 @@ simde_neon_families = [
   'rndp',
   'rshl',
   'rshr_n',
+  'rshrn_high_n',
   'rshrn_n',
   'rsqrte',
   'rsqrts',
