[NEON] Add r{add/sub}hn_{high} and reinterpret series.

--- a/meson.build
+++ b/meson.build
@@ -160,6 +160,7 @@ simde_neon_families = [
   'qrdmulh',
   'qrdmulh_lane',
   'qrdmulh_n',
+  #'qrshl',
   'qrshrn_high_n',
   'qrshrn_n',
   'qrshrun_high_n',
@@ -176,6 +177,8 @@ simde_neon_families = [
   'qsub',
   'qtbl',
   'qtbx',
+  'raddhn',
+  'raddhn_high',
   'rbit',
   'recpe',
   'recps',
@@ -196,6 +199,8 @@ simde_neon_families = [
   'rsqrte',
   'rsqrts',
   'rsra_n',
+  'rsubhn',
+  'rsubhn_high',
   'set_lane',
   'shl',
   'shl_n',
