[NEON] Add sli_n, st1_x2, and st1q_x2.

--- a/meson.build
+++ b/meson.build
@@ -207,12 +207,15 @@ simde_neon_families = [
   'shll_n',
   'shr_n',
   'shrn_n',
+  'sli_n',
   'sqadd',
   'sqrt',
   'sra_n',
   'sri_n',
   'st1',
   'st1_lane',
+  'st1_x2',
+  'st1q_x2',
   'st2',
   'st2_lane',
   'st3',
