--- a/meson.build
+++ b/meson.build
@@ -160,7 +160,7 @@ simde_neon_families = [
   'qrdmulh',
   'qrdmulh_lane',
   'qrdmulh_n',
-  #'qrshl',
+  'qrshl',
   'qrshrn_high_n',
   'qrshrn_n',
   'qrshrun_high_n',
@@ -216,8 +216,10 @@ simde_neon_families = [
   'st1_lane',
   'st1_x2',
   'st1_x3',
+  'st1_x4',
   'st1q_x2',
   'st1q_x3',
+  'st1q_x4',
   'st2',
   'st2_lane',
   'st3',
