[NEON] Add abdl_high, addhn_high, and qshl_n.

--- a/meson.build
+++ b/meson.build
@@ -14,9 +14,11 @@ simde_neon_families = [
   'abal_high',
   'abd',
   'abdl',
+  'abdl_high',
   'abs',
   'add',
   'addhn',
+  'addhn_high',
   'addl',
   'addlv',
   'addl_high',
@@ -170,6 +172,7 @@ simde_neon_families = [
   'qmovun',
   'qneg',
   'qshl',
+  'qshl_n',
   'qshlu_n',
   'qshrn_high_n',
   'qshrn_n',
