[NEON] Add cvtm, cvtp, and copy_lane.

--- a/meson.build
+++ b/meson.build
@@ -52,8 +52,11 @@ simde_neon_families = [
   'cnt',
   'cvt',
   'cvt_n',
+  'cvtm',
   'cvtn',
+  'cvtp',
   'combine',
+  'copy_lane',
   'create',
   'div',
   'dot',
