[NEON] Add fmlal, fmlsl, maxnmv, minnmv, pmaxnm, pminnm.

--- a/meson.build
+++ b/meson.build
@@ -68,6 +68,8 @@ simde_neon_families = [
   'fma',
   'fma_lane',
   'fma_n',
+  'fmlal',
+  'fmlsl',
   'fms',
   'fms_lane',
   'fms_n',
@@ -96,9 +98,11 @@ simde_neon_families = [
   'ld4_lane',
   'max',
   'maxnm',
+  'maxnmv',
   'maxv',
   'min',
   'minnm',
+  'minnmv',
   'minv',
   'mla',
   'mla_lane',
@@ -138,7 +142,9 @@ simde_neon_families = [
   'padd',
   'paddl',
   'pmax',
+  'pmaxnm',
   'pmin',
+  'pminnm',
   'qadd',
   'qabs',
   'qdmlal',
