--- a/meson.build
+++ b/meson.build
@@ -174,6 +174,9 @@ simde_neon_families = [
   'qdmull_lane',
   'qdmull_n',
   'qrdmlah',
+  'qrdmlah_lane',
+  'qrdmlsh',
+  'qrdmlsh_lane',
   'qrdmulh',
   'qrdmulh_lane',
   'qrdmulh_n',
@@ -192,6 +195,7 @@ simde_neon_families = [
   'qshlu_n',
   'qshrn_high_n',
   'qshrn_n',
+  'qshrun_high_n',
   'qshrun_n',
   'qsub',
   'qtbl',
@@ -207,10 +211,16 @@ simde_neon_families = [
   'rev64',
   'rhadd',
   'rnd',
+  'rnd32x',
+  'rnd32z',
+  'rnd64x',
+  'rnd64z',
+  'rnda',
   'rndi',
   'rndm',
   'rndn',
   'rndp',
+  'rndx',
   'rshl',
   'rshr_n',
   'rshrn_high_n',
@@ -223,6 +233,7 @@ simde_neon_families = [
   'set_lane',
   'shl',
   'shl_n',
+  'shll_high_n',
   'shll_n',
   'shr_n',
   'shrn_n',
