[NEON] Add 7 intrinsic series. cadd_rot270, cadd_rot90, shrn_high_n, subhn_high, sudot_lane, usdot, usdot_lane

--- a/meson.build
+++ b/meson.build
@@ -29,6 +29,8 @@ simde_neon_families = [
   'bcax',
   'bic',
   'bsl',
+  'cadd_rot270',
+  'cadd_rot90',
   'cage',
   'cagt',
   'cale',
@@ -236,6 +238,7 @@ simde_neon_families = [
   'shll_high_n',
   'shll_n',
   'shr_n',
+  'shrn_high_n',
   'shrn_n',
   'sli_n',
   'sqadd',
@@ -258,10 +261,12 @@ simde_neon_families = [
   'st4_lane',
   'sub',
   'subhn',
+  'subhn_high',
   'subl',
   'subl_high',
   'subw',
   'subw_high',
+  'sudot_lane',
   'tbl',
   'tbx',
   'trn1',
@@ -269,6 +274,8 @@ simde_neon_families = [
   'trn',
   'tst',
   'uqadd',
+  'usdot',
+  'usdot_lane',
   'uzp1',
   'uzp2',
   'uzp',
