[NEON] Add 5 series intrinsics. cmla_lane, cmla_rot180_lane, cmla_rot270_lane, cmla_rot90_lane, recpx.

--- a/meson.build
+++ b/meson.build
@@ -48,9 +48,13 @@ simde_neon_families = [
   'cltz',
   'clz',
   'cmla',
-  'cmla_rot90',
+  'cmla_lane',
   'cmla_rot180',
+  'cmla_rot180_lane',
   'cmla_rot270',
+  'cmla_rot270_lane',
+  'cmla_rot90',
+  'cmla_rot90_lane',
   'cnt',
   'cvt',
   'cvt_n',
@@ -207,6 +211,7 @@ simde_neon_families = [
   'rbit',
   'recpe',
   'recps',
+  'recpx',
   'reinterpret',
   'rev16',
   'rev32',
