[NEON] Add ldr and str related intrinsics.

--- a/meson.build
+++ b/meson.build
@@ -104,6 +104,7 @@ simde_neon_families = [
   'ld4',
   'ld4_dup',
   'ld4_lane',
+  'ldr',
   'max',
   'maxnm',
   'maxnmv',
@@ -272,6 +273,7 @@ simde_neon_families = [
   'st3_lane',
   'st4',
   'st4_lane',
+  'str',
   'sub',
   'subhn',
   'subhn_high',
