--- a/meson.build
+++ b/meson.build
@@ -48,6 +48,7 @@ simde_neon_families = [
   'cvtn',
   'combine',
   'create',
+  'div',
   'dot',
   'dot_lane',
   'dup_n',
@@ -164,6 +165,7 @@ simde_neon_families = [
   'shr_n',
   'shrn_n',
   'sqadd',
+  'sqrt',
   'sra_n',
   'sri_n',
   'st1',
