aes: fixed some CI warnings
removed trailing whitespaces
commented unused variables
changed const variable to define

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,6 +105,7 @@ jobs:
         - -mavx
         - -mfma
         - -mavx2
+        - -maes
     env:
       CFLAGS: -Wall -Wextra -Werror ${{ matrix.isax }}
       CXXFLAGS: -Wall -Wextra -Werror ${{ matrix.isax }}
