[Neon] : add meson.build and simde/arm/neon.h

--- a/meson.build
+++ b/meson.build
@@ -25,6 +25,8 @@ simde_neon_families = [
   'bcax',
   'bic',
   'bsl',
+  'cadd_rot270',
+  'cadd_rot90',
   'cage',
   'cagt',
   'ceq',
@@ -40,6 +42,10 @@ simde_neon_families = [
   'cltz',
   'clz',
   'cmla',
+  'cmla_lane',
+  'cmla_rot180_lane',
+  'cmla_rot270_lane',
+  'cmla_rot90_lane',
   'cmla_rot90',
   'cmla_rot180',
   'cmla_rot270',
